add social information for request and refactor get-requests api
