# mixins/dbMixins/db-deployment-requests.mixin.ts
@@ -30,9 +30,15 @@ const dbBaseMixin = new DbBaseMixin({
             whitepaper: String,
             github: String,
             telegram: String,
+            wechat: String,
+            linkedin: String,
             discord: String,
+            medium: String,
+            reddit: String,
+            slack: String,
             facebook: String,
             twitter: String,
+            bitcointalk: String,
             euphoria_code_id: Number,
             mainnet_code_id: Number,
             contract_hash: String,
