# services/api-service/request.service.ts
@@ -1,7 +1,7 @@
 import { Get, Post, Service } from "@ourparentcenter/moleculer-decorators-extended";
 import { DeploymentRequests } from "../../entities";
 import { Context } from "moleculer";
-import { ErrorCode, ErrorMessage, GetRequestsParams, ListRequestsParams, MainnetUploadStatus, MoleculerDBService, RequestDeploymentParams, ResponseDto, UpdateRequestDeploymentParams } from "../../types";
+import { ErrorCode, ErrorMessage, GetRequestsParams, ListRequestsParams, MainnetUploadStatus, MoleculerDBService, RequestDeploymentParams, ResponseDto } from "../../types";
 
 /**
  * @typedef {import('moleculer').Context} Context Moleculer's Context
@@ -29,116 +29,6 @@ export default class RequestService extends MoleculerDBService<
 },
 {}
 > {
-	/**
-	 *  @swagger
-	 *
-	 *  /api/v1/request/all-requests:
-	 *    get:
-	 *      tags:
-	 *        - "Requests"
-	 *      summary:  Show list of all requests
-	 *      description: Show list of all requests
-	 *      security:
-	 *        - bearerAuth: []
-	 *      parameters:
-	 *        - in: query
-	 *          name: status
-	 *          schema:
-	 *            type: string
-	 *            enum: ["Successful", "Rejected", "Pending"]
-	 *          description: Status of the request
-	 *        - in: query
-	 *          name: requester_address
-	 *          schema:
-	 *            type: string
-	 *          description: Address of the one create the request
-	 *        - in: query
-	 *          name: limit
-	 *          required: true
-	 *          schema:
-	 *            type: number
-	 *            default: 10
-	 *          description: Limit number of requests returned
-	 *        - in: query
-	 *          name: offset
-	 *          required: true
-	 *          schema:
-	 *            type: number
-	 *            default: 0
-	 *          description: Number of requests to pass
-	 *      responses:
-	 *        200:
-	 *          description: List requests result
-	 *        422:
-	 *          description: Missing parameters
-	 */
-	 @Get('/all-requests', {
-		name: 'getAllRequests',
-		/**
-		 * Service guard services allowed to connect
-		 */
-		restricted: ['api'],
-	})
-	async getAllRequests(ctx: Context<ListRequestsParams>) {
-		let result = await this.broker.call('v1.deployment-requests.getAll', {
-			status: ctx.params.status,
-			requester_address: ctx.params.requester_address,
-			limit: ctx.params.limit,
-			offset: ctx.params.offset
-		} as ListRequestsParams);
-
-		const response: ResponseDto = {
-			code: ErrorCode.SUCCESSFUL,
-			message: ErrorMessage.SUCCESSFUL,
-			data: result
-		};
-
-		return response;
-	}
-
-	/**
-	 *  @swagger
-	 *
-	 *  /api/v1/request/details:
-	 *    get:
-	 *      tags:
-	 *        - "Requests"
-	 *      summary:  Show list of all requests
-	 *      description: Show list of all requests
-	 *      security:
-	 *        - bearerAuth: []
-	 *      parameters:
-	 *        - in: query
-	 *          name: request_id
-	 *          required: true
-	 *          schema:
-	 *            type: number
-	 *          description: Id of the request
-	 *      responses:
-	 *        200:
-	 *          description: List requests result
-	 *        422:
-	 *          description: Missing parameters
-	 */
-	 @Get('/details', {
-		name: 'getRequestDetails',
-		/**
-		 * Service guard services allowed to connect
-		 */
-		restricted: ['api'],
-	})
-	async getRequestDetails(ctx: Context<GetRequestsParams>) {
-		let result: DeploymentRequests = await this.broker.call('v1.deployment-requests.getRequests', { request_id: ctx.params.request_id });
-
-		const response: ResponseDto = {
-			code: ErrorCode.SUCCESSFUL,
-			message: ErrorMessage.SUCCESSFUL,
-			data: result
-		};
-
-		return response;
-	}
-
 	/**
 	 *  @swagger
 	 *
@@ -198,15 +88,33 @@ export default class RequestService extends MoleculerDBService<
 	 *                telegram:
 	 *                  type: string
 	 *                  description: "Official project telegram"
+	 *                wechat:
+	 *                  type: string
+	 *                  description: "Official project wechat"
+	 *                linkedin:
+	 *                  type: string
+	 *                  description: "Official project linkedin"
 	 *                discord:
 	 *                  type: string
 	 *                  description: "Official project discord"
+	 *                medium:
+	 *                  type: string
+	 *                  description: "Official project medium"
+	 *                reddit:
+	 *                  type: string
+	 *                  description: "Official project reddit"
+	 *                slack:
+	 *                  type: string
+	 *                  description: "Official project slack"
 	 *                facebook:
 	 *                  type: string
 	 *                  description: "Official project facebook"
 	 *                twitter:
 	 *                  type: string
 	 *                  description: "Official project twitter"
+	 *                bitcointalk:
+	 *                  type: string
+	 *                  description: "Official project bitcointalk"
 	 *      responses:
 	 *        200:
 	 *          description: Request result
@@ -232,9 +140,15 @@ export default class RequestService extends MoleculerDBService<
 			whitepaper: 'string',
 			github: 'string',
 			telegram: 'string',
+			wechat: 'string',
+			linkedin: 'string',
 			discord: 'string',
+			medium: 'string',
+			reddit: 'string',
+			slack: 'string',
 			facebook: 'string',
 			twitter: 'string',
+			bitcointalk: 'string',
 		},
 	})
 	async requestContractDeployment(ctx: Context<RequestDeploymentParams>) {
@@ -252,9 +166,15 @@ export default class RequestService extends MoleculerDBService<
 		let whitepaper = ctx.params.whitepaper;
 		let github = ctx.params.github;
 		let telegram = ctx.params.telegram;
+		let wechat = ctx.params.wechat;
+		let linkedin = ctx.params.linkedin;
 		let discord = ctx.params.discord;
+		let medium = ctx.params.medium;
+		let reddit = ctx.params.reddit;
+		let slack = ctx.params.slack;
 		let facebook = ctx.params.facebook;
 		let twitter = ctx.params.twitter;
+		let bitcointalk = ctx.params.bitcointalk;
 		let currentRequestId: number = await this.broker.call('v1.deployment-requests.getLatestRequestId');
 		let request_id = currentRequestId + 1;
 		await Promise.all(ctx.params.code_ids.map(async (code_id) => {
@@ -288,9 +208,15 @@ export default class RequestService extends MoleculerDBService<
 					whitepaper,
 					github,
 					telegram,
+					wechat,
+					linkedin,
 					discord,
+					medium,
+					reddit,
+					slack,
 					facebook,
 					twitter,
+					bitcointalk,
 					contract_hash,
 					url,
 					instantiate_msg_schema,
@@ -330,146 +256,6 @@ export default class RequestService extends MoleculerDBService<
 			code: ErrorCode.SUCCESSFUL,
 			message: ErrorMessage.REQUEST_SUCCESSFUL,
 			data: { contracts: ctx.params.code_ids }
-		};
-		return response;
-	}
-
-	/**
-	 *  @swagger
-	 *
-	 *  /api/v1/request/update:
-	 *    post:
-	 *      tags:
-	 *        - "Requests"
-	 *      summary:  Update a request to deploy a contract on mainnet
-	 *      description: Update a request to deploy a contract on mainnet
-	 *      requestBody:
-	 *        content:
-	 *          application/json:
-	 *            schema:
-	 *              type: object
-	 *              required:
-	 *              - request_id
-	 *              properties:
-	 *                request_id:
-	 *                  type: number
-	 *                  description: "Id of the request"
-	 *                name:
-	 *                  type: string
-	 *                  description: "Name of subscriber"
-	 *                email:
-	 *                  type: string
-	 *                  description: "Email of subscriber"
-	 *                contract_description:
-	 *                  type: string
-	 *                  description: "Description of contract(s)"
-	 *                project_name:
-	 *                  type: string
-	 *                  description: "Project name"
-	 *                official_project_website:
-	 *                  type: string
-	 *                  description: "Official project website"
-	 *                official_project_email:
-	 *                  type: string
-	 *                  description: "Official project email"
-	 *                project_sector:
-	 *                  type: string
-	 *                  description: "Sector of the contract in the project"
-	 *                whitepaper:
-	 *                  type: string
-	 *                  description: "Official project whitepaper"
-	 *                github:
-	 *                  type: string
-	 *                  description: "Official project github"
-	 *                telegram:
-	 *                  type: string
-	 *                  description: "Official project telegram"
-	 *                discord:
-	 *                  type: string
-	 *                  description: "Official project discord"
-	 *                facebook:
-	 *                  type: string
-	 *                  description: "Official project facebook"
-	 *                twitter:
-	 *                  type: string
-	 *                  description: "Official project twitter"
-	 *      responses:
-	 *        200:
-	 *          description: Request result
-	 *        422:
-	 *          description: Missing parameters
-	 */
-	@Post('/update', {
-		name: 'updateRequestContractDeployment',
-		/**
-		 * Service guard services allowed to connect
-		 */
-		restricted: ['api'],
-		params: {
-			request_id: 'number',
-			name: 'string',
-			email: 'string',
-			contract_description: 'string',
-			project_name: 'string',
-			official_project_website: 'string',
-			official_project_email: 'string',
-			project_sector: 'string',
-			whitepaper: 'string',
-			github: 'string',
-			telegram: 'string',
-			discord: 'string',
-			facebook: 'string',
-			twitter: 'string',
-		},
-	})
-	async updateRequestContractDeployment(ctx: Context<UpdateRequestDeploymentParams>) {
-		let name = ctx.params.name;
-		let email = ctx.params.email;
-		let contract_description = ctx.params.contract_description;
-		let project_name = ctx.params.project_name;
-		let official_project_website = ctx.params.official_project_website;
-		let official_project_email = ctx.params.official_project_email;
-		let project_sector = ctx.params.project_sector;
-		let whitepaper = ctx.params.whitepaper;
-		let github = ctx.params.github;
-		let telegram = ctx.params.telegram;
-		let discord = ctx.params.discord;
-		let facebook = ctx.params.facebook;
-		let twitter = ctx.params.twitter;
-		let requests: DeploymentRequests[] = await this.broker.call('v1.deployment-requests.getRequests', { request_id: ctx.params.request_id });
-		if (requests.length === 0) {
-			const response: ResponseDto = {
-				code: ErrorCode.REQUEST_NOT_FOUND,
-				message: ErrorMessage.REQUEST_NOT_FOUND,
-				data: { request_id: ctx.params.request_id }
-			};
-			return response;
-		}
-		await this.broker.call(
-			'v1.deployment-requests.updateRequests',
-			{
-				request_id: ctx.params.request_id,
-				name,
-				email,
-				contract_description,
-				project_name,
-				official_project_website,
-				official_project_email,
-				project_sector,
-				whitepaper,
-				github,
-				telegram,
-				discord,
-				facebook,
-				twitter,
-				status: MainnetUploadStatus.PENDING,
-				reason: ''
-			}
-		);
-		const response: ResponseDto = {
-			code: ErrorCode.SUCCESSFUL,
-			message: ErrorMessage.UPDATE_REQUEST_SUCCESSFUL,
-			data: { requests: ctx.params }
 		};
 		return response;
 	}
