# services/handle-request/handle-request-mainnet.service.ts
@@ -83,9 +83,15 @@ export default class HandleRequestMainnetService extends Service {
                                 whitepaper: ctx.params.whitepaper,
                                 github: ctx.params.github,
                                 telegram: ctx.params.telegram,
+                                wechat: ctx.params.wechat,
+                                linkedin: ctx.params.linkedin,
                                 discord: ctx.params.discord,
+                                medium: ctx.params.medium,
+                                reddit: ctx.params.reddit,
+                                slack: ctx.params.slack,
                                 facebook: ctx.params.facebook,
                                 twitter: ctx.params.twitter,
+                                bitcointalk: ctx.params.bitcointalk,
                                 contract_hash: ctx.params.contract_hash,
                                 url: ctx.params.url,
                                 instantiate_msg_schema: ctx.params.instantiate_msg_schema,
@@ -118,9 +124,15 @@ export default class HandleRequestMainnetService extends Service {
         whitepaper: string,
         github: string,
         telegram: string,
+        wechat: string,
+        linkedin: string,
         discord: string,
+        medium: string,
+        reddit: string,
+        slack: string,
         facebook: string,
         twitter: string,
+        bitcointalk: string,
         contract_hash: string,
         url: string,
         instantiate_msg_schema: string,
@@ -141,9 +153,15 @@ export default class HandleRequestMainnetService extends Service {
             whitepaper,
             github,
             telegram,
+            wechat,
+            linkedin,
             discord,
+            medium,
+            reddit,
+            slack,
             facebook,
             twitter,
+            bitcointalk,
             euphoria_code_id: code_id,
             contract_hash,
             url,
